fixed styles issue on safari 9/10 for the modal box

--- a/components/modal/modal.scss
+++ b/components/modal/modal.scss
@@ -135,9 +135,12 @@
 .ui-modal__content {
   -webkit-overflow-scrolling: touch;
   background-color: var(--tx-generic-color-secondary);
-  height: 100%;
   overflow-y: auto;
   padding: 12px;
+
+  .ui-modal_fullscreen & {
+    height: 100%;
+  }
 }
 
 .ui-modal__footer {
@@ -149,9 +152,5 @@
 .ui-modal_size_small {
   .ui-modal__container {
     max-width: 480px;
-  }
-  .ui-modal__content {
-    height: 100%;
-    padding: 12px;
   }
 }
